--- a/app/views/layouts/public/_header.html.erb
+++ b/app/views/layouts/public/_header.html.erb
@@ -74,15 +74,16 @@
 
 　function coordinateSearch () {
 　  $(".coordinate-search").click(function () {
-      $("#search-wrap-coordinate").show();
-      $("#search-wrap-coordinate").addClass('panelactive');//#search-wrap-coordinateへpanelactiveクラスを付与
+      $("#search-wrap-coordinate").show().addClass('panelactive');//#search-wrap-coordinateへpanelactiveクラスを付与
       $('#q_tags_name_cont').focus();//テキスト入力のinputにフォーカス
+      $("#footer").css("z-index", "0");
     });
 
     //閉じるボタンを押した時
     $(".close-btn-coordinate").click(function () {
       $("#search-wrap-coordinate").removeClass('panelactive');//#search-wrap-coordinateからpanelactiveクラスを除去
       $("#q_tags_name_cont").val("");
+      $("#footer").css("z-index", "0");
     });
 　};
 
