--- a/app/views/public/posts/search.html.erb
+++ b/app/views/public/posts/search.html.erb
@@ -1,15 +1,5 @@
-<header id="title_top">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-10 offset-md-1 d-flex justify-content-between">
-        <h1>タグ検索一覧</h1>
-        <div class="all_member">
-          <h2 class="ps-3"><%= @search_posts.count %><span>件</span></h2>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+<!--タイトルヘッダー-->
+<%= render "public/posts/title_top", posts: @search_posts, title: "タグ検索結果" %>
 
 <div class="container">
   <div class="row">
@@ -18,30 +8,7 @@
         <div class="row">
           <!--性別選択-->
           <div class="col-md-3 gender-nav">
-            <nav id="sidebar">
-              <section class="gender pb-3">
-                <h2 class="title">性別</h2>
-                <ul class="m-0">
-                  <li class="py-2"><%= link_to "ALL", posts_path %></li>
-                  <li class="py-2"><%= link_to "MEN", men_posts_path %></li>
-                  <li class="py-2"><%= link_to "WOMEN", women_posts_path %></li>
-                </ul>
-              </section>
-              <section class="sidebar-tag pt-3">
-                <h2 class="title">タグ</h2>
-                <ul>
-                  <li class="py-2 d-flex flex-wrap">
-                    <% @tags.each do |tag| %>
-                      <div class="tag_box mb-2 me-2">
-                        <%= link_to tag_path(tag) do %>
-                          # <%= tag.name %>
-                        <% end %>
-                      </div>
-                    <% end %>
-                  </li>
-                </ul>
-              </section>
-            </nav>
+            <%= render "sidebar", tags: @tags %>
           </div>
           <% if @search_posts.present? %>
             <!--コーディネート一覧-->
