--- a/app/views/admin/members/men.html.erb
+++ b/app/views/admin/members/men.html.erb
@@ -17,23 +17,8 @@
     <div class="col-md-8 offset-md-2 d-flex justify-content-between">
       <div class="container">
         <div class="row">
-          <!--性別選択-->
-          <div class="col-lg-3 gender-nav">
-            <nav id="sidebar">
-              <h2 class="title">一覧</h2>
-              <ul class="m-0">
-                <li class="py-2"><%= link_to "コーディネート", admin_posts_path %></li>
-                <li class="py-2"><%= link_to "ユーザー", admin_root_path %></li>
-                <li class="py-2"><%= link_to "タグ", admin_tags_path %></li>
-              </ul>
-              <h2 class="title">性別</h2>
-              <ul class="m-0">
-                <li class="py-2"><%= link_to "ALL", admin_root_path %></li>
-                <li class="py-2"><%= link_to "MEN", men_admin_members_path %></li>
-                <li class="py-2"><%= link_to "WOMEN", women_admin_members_path %></li>
-              </ul>
-            </nav>
-          </div>
+          <!--サイドバー-->
+          <%= render "admin/members/sidebar" %>
 
           <!--ユーザー一覧-->
           <div class="col-lg-9">
