--- a/app/views/admin/members/favorites.html.erb
+++ b/app/views/admin/members/favorites.html.erb
@@ -1,88 +1,22 @@
-<header id="title_top">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 offset-md-2 member_info">
-        <p><%= @member.name %>のいいね一覧</p>
-        <div class="member_profile mt-3">
-          <div class="d-flex">
-            <div>
-              <%= image_tag @member.get_profile_image, class: "profile_image_show" %>
-            </div>
-            <div class="title_text ps-4 pt-1">
-              <h1><%= @member.name %></h1>
-              <div class="d-flex">
-                <p class="pe-2"><%= @member.get_gender %></p>
-                <p class="pe-2"><%= @member.get_height %></p>
-              </div>
-              <p class="pt-3"><%= @member.body %></p>
-            </div>
-          </div>
-        </div>
-        <div class="withdraw_btn">
-          <% if @member.is_deleted != true %>
-            <%= link_to withdraw_admin_member_path(@member), method: :patch, data: {confirm: "本当に退会させますか？"}, class: "danger-btn bg-red" do %>
-              <span>退会させる</span>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+<!--タイトル-->
+<%= render "admin/members/title_show", member: @member, text: "のいいね一覧" %>
 
-<!--ユーザーの投稿数、いいね、フォロー、フォロワー数-->
 <div class="container mt-3">
+  <!--ユーザーの投稿数、いいね数、フォロー、フォロワー数-->
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <div class="coordinate_follow d-flex text-center">
-        <div class="coordinate_follow_box col-3">
-          <%= link_to admin_member_path(@member) do %>
-            <%= @member.posts.count %>
-            <span>コーディネート</span>
-          <% end %>
-        </div>
-        <div class="coordinate_follow_box col-3">
-          <%= link_to favorites_admin_member_path(@member) do %>
-            <%= @member.favorites.count %>
-            <span>いいね</span>
-          <% end %>
-        </div>
-        <div class="coordinate_follow_box col-3">
-          <%= link_to followings_admin_member_path(@member) do %>
-            <%= @member_followings.count %>
-            <span>フォロー</span>
-          <% end %>
-        </div>
-        <div class="coordinate_follow_box col-3">
-          <%= link_to followers_admin_member_path(@member) do %>
-            <%= @member_followers.count %>
-            <span>フォロワー</span>
-          <% end %>
-        </div>
-      </div>
+      <%= render "admin/members/coordinate_follow", member: @member, member_followings: @member_followings, member_followers: @member_followers %>
     </div>
   </div>
+
+  <!--いいねした投稿一覧-->
   <div class="row">
-    <% if @favorites.present? %>
-      <% @favorites.each do |post| %>
-        <div class="col-lg-3 col-md-4 col-sm-6 g-5">
-          <div class="card card-effect">
-            <%= link_to admin_post_path(post) do %>
-              <%= image_tag post.outfit_image, class: "outfit_image_index" %>
-            <% end %>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item" id="favorite_buttons_<%= post.id %>">
-                <p class="text-center">
-                  <i class="fa-solid fa-heart text-danger"></i>
-                  <%= post.favorites.count %>
-                </p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      <% end %>
+    <% if @member.posts.count == 0 %>
+      <div class="pt-5 text-center">
+        <h4>いいねした投稿がありません</h4>
+      </div>
     <% else %>
-      <h2 class="text-center pt-5">いいねした投稿がありません</h2>
+      <%= render "admin/members/member_posts", member_posts: @favorites %>
     <% end %>
   </div>
 </div>
